# MyRayTracer

./: CMakeLists.txt  README.md  cornel_box.tga  cornel_box1.tga  nice_result.tga  result.tga  result1.tga  result_CornelBox.tga  result_CornelBox1.tga  test_result.tga  test_result2.tga  test_result3.tga  test_result4.tga
assets/: earthmap.tga
src/: BVH.h  Camera.cpp  Camera.h  Intersectable.h  Material.h  MathLib.h  Matrix.h  Mesh.h  Perlin.h  Ray.h  Sphere.h  TGAImage.cpp  TGAImage.h  Texture.h  Triangle.h  Volume.h  main.cpp  utility.h
